--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,13648],[],[[4,0,1,0,[],[1,200,13447],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15675],[],[[4,0,1,0,[],[1,5663,2167],[]],[5,0,1,0,[],[1,7831,1921],[]],[6,0,1,0,[],[1,9753,1847],[]],[7,0,1,0,[],[1,11600,2044],[]],[8,0,1,0,[],[1,13645,1939],[]]],[],[5,5,5,5]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Practice","*/Users/echalo/PycharmCoding/RobotFramework/Testcases/practice.robot","*Testcases/practice.robot","*MyPracticeTest"]);
+window.output["strings"] = window.output["strings"].concat(["*","*practiceDDT","*/Users/echalo/PycharmCoding/RobotFramework/Testcases/practiceDDT.robot","*Testcases/practiceDDT.robot","*Right user wrong password","*Right user empty password","*Wrong user right password","*Wrong user wrong password","*Empty user worng password"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:14","fail":0,"id":"s1","label":"Practice","name":"Practice","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"Critical Tests","pass":5},{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":5}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"practiceDDT","name":"practiceDDT","pass":5}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1571768253052;
+window.output["baseMillis"] = 1572294692941;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13659;
+window.output["generated"] = 15691;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
