--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7183],[],[[1,0,1,0,[],[1,222,6958],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,17241],[],[[1,0,1,0,[],[1,270,16967],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RegistrationTest","*/Users/echalo/PycharmCoding/RobotFramework/Testcases/RegistrationTest.robot","*Testcases/RegistrationTest.robot"]);
+window.output["strings"] = window.output["strings"].concat(["*","*LoginTest","*/Users/echalo/PycharmCoding/RobotFramework/Testcases/LoginTest.robot","*Testcases/LoginTest.robot"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"RegistrationTest","name":"RegistrationTest","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"LoginTest","name":"LoginTest","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1572811366594;
+window.output["baseMillis"] = 1572988845208;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7199;
+window.output["generated"] = 17255;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
